Add commit hash

--- a/README.org
+++ b/README.org
@@ -1,10 +1,9 @@
 * fare-memoization
 
+Dynamically memoizing Lisp functions.
 
-
-|---------+-------------------------------------------|
-| source  | git:https://gitlab.common-lisp.net/frideau/fare-memoization.git   |
-| commit  |   |
-| systems | fare-memoization |
-|---------+-------------------------------------------|
-
+|---------+-----------------------------------------------------------------|
+| source  | git:https://gitlab.common-lisp.net/frideau/fare-memoization.git |
+| commit  | 8b43ac                                                          |
+| systems | fare-memoization                                                |
+|---------+-----------------------------------------------------------------|
